# tree-sitter-werk

./: .clang-format  .werk-cache  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  Werkfile  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-werk.h  tree-sitter-werk.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_werk/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterwerkTests/: TreeSitterwerkTests.swift
queries/werk/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: array.txt  copy.txt  discard.txt  env.txt  match.txt
